--- a/src/komponenten/referenzen/referenzen1.css
+++ b/src/komponenten/referenzen/referenzen1.css
@@ -1,3 +1,28 @@
+.referenzen1-up-parent:hover .referenzen1-up-child{
+  animation: referenzen1-up 0.5s both;
+}
+
+.referenzen1-span-down{
+  animation: referenzen1-down 0.3s both;
+}
+
+@keyframes referenzen1-up {
+  0% {
+    height: 2rem;
+  }
+  100% {
+    height:4rem;
+  }
+}
+@keyframes referenzen1-down {
+  0% {
+    height:4rem;
+  }
+  100% {
+    height:2rem;
+  }
+}
+
 .referenzen1-container {
   position: relative;
   min-width: 100vw;
@@ -33,7 +58,7 @@
 }
 .referenzen1-container .referenzen1-image-container .referenzen1-image:hover img {
   cursor: pointer;
-  transform: scale(1.05);
+  /* transform: scale(1.03); */
 }
 
 .referenzen1-container .referenzen1-popup-image {
